# SysCheck-Lite

./: .gitignore  LICENSE  README.md  TODO.md  config.ini  pyproject.toml
profiles/: default.json
syscheck/: main.py
syscheck/collectors/: LinuxCollector.py  RHELCollector.py  WindowsCollector.py
syscheck/connectors/: ssh.py  winrm.py
syscheck/formatter/: TerminalFormatter.py  htmlFormatter.py  jsonFormatter.py
tests/: test_create_connectors.py  test_formatters.py  test_interactive_args.py  test_profiles.py  test_ssh_connection.py  test_winrm_connection.py
