[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syscheck-lite"
version = "0.1.0"
description = "A lightweight CLI tool to run system checks over SSH and WinRM"
authors = [
  { name = "Kristopher Scheuer", email = "KDScheuer97@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
  "paramiko>=3.0.0",
  "pywinrm>=0.4.3"
]

[project.urls]
Homepage = "https://github.com/KDScheuer/SysCheck-Lite"

[project.scripts]
syscheck = "syscheck.main:cli_entry_point"